--- a/src/main/Color.scss
+++ b/src/main/Color.scss
@@ -1,9 +1,12 @@
 $MainColor: #3417ff;
 $Bg: #000000;
+$Bg2: #f2ede3;
 $White: #ffffff;
 $DescText: #dddfdd;
+$NavDesc: #dddddd;
+$StrokeCard: #d7d0d0;
+$DetC: #e6e6e6;
 $DescText_: #656d66;
 $StrokeColor: #cbbcbc;
-$SecondBg: #f2ede3;
 $Blue: #0062ce;
 $ButtonBg: #e6e3e3;
