--- a/src/main/Color.scss
+++ b/src/main/Color.scss
@@ -1,5 +1,7 @@
 $MainColor: #3417ff;
 $Bg: #000000;
+$Bg_: #1a1a1a;
+
 $Bg2: #f2ede3;
 $White: #ffffff;
 $DescText: #dddfdd;
@@ -10,3 +12,5 @@ $DescText_: #656d66;
 $StrokeColor: #cbbcbc;
 $Blue: #0062ce;
 $ButtonBg: #e6e3e3;
+$White__: #eae7e7;
+$White___: #e8e8e8af;
