--- a/src/Sections/Starter/Starter.css
+++ b/src/Sections/Starter/Starter.css
@@ -19,6 +19,7 @@
   height: 100%;
   position: relative;
   padding-top: 30px;
+  transition: 1s;
 }
 .SectionSplitter .WelcomeSide h1 {
   color: #ffffff;
@@ -69,6 +70,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: 1s;
   position: relative;
 }
 .SectionSplitter .ImageSide img {
