--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,26 @@
   font-family: main_regular;
   src: url("./Fonts/Poppins-Regular.ttf");
 }
+.anim1 {
+  transform: translateY(-100px);
+  opacity: 0;
+}
+
+.anim2 {
+  transform: translateY(200px);
+  opacity: 0;
+}
+
+.anim3 {
+  transform: translateX(-300px);
+  opacity: 0;
+}
+
+.anim4 {
+  transform: translateX(300px);
+  opacity: 0;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -14,6 +34,15 @@
 
 body {
   background-color: #000000;
+}
+
+::-webkit-scrollbar {
+  background-color: #1a1a1a;
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3417ff;
 }
 
 a {
