--- a/src/Sections/Discover/Discover.css
+++ b/src/Sections/Discover/Discover.css
@@ -12,10 +12,13 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 .FilterSwap .FRow {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 15px;
 }
 
