--- a/src/main/Color.scss
+++ b/src/main/Color.scss
@@ -1,8 +1,8 @@
 $MainColor: #3417ff;
 $Bg: #000000;
 $Bg_: #1a1a1a;
-
 $Bg2: #f2ede3;
+$Bg3: #0a0a0a;
 $White: #ffffff;
 $DescText: #dddfdd;
 $NavDesc: #dddddd;
