--- a/src/Components/Navbar/Nav.css
+++ b/src/Components/Navbar/Nav.css
@@ -6,7 +6,7 @@ nav {
 nav .contentContainer {
   display: flex;
   justify-content: space-between;
-  transition: 1s;
+  transition: transfrom 1s, left 0.5s;
 }
 nav .contentContainer .LogoSide {
   font-family: main_bold;
@@ -55,4 +55,45 @@ nav .contentContainer ul .liActive {
 }
 nav .contentContainer .ButtonSide button {
   font-size: 16px;
+}
+
+.navToggle {
+  position: fixed;
+  background: #0a0a0a;
+  top: 20px;
+  right: 20px;
+  height: 60px;
+  aspect-ratio: 1;
+  display: none;
+  z-index: 999;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
+}
+.navToggle span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 65%;
+  border-radius: 5px;
+  background: #3417ff;
+  transition: 0.2s;
+}
+.navToggle span:nth-child(1) {
+  transform: translateY(-11px);
+}
+.navToggle span:nth-child(3) {
+  transform: translateY(11px);
+}
+
+.navToggleActive span:nth-child(1) {
+  transform: translateY(0) rotate(45deg);
+}
+.navToggleActive span:nth-child(2) {
+  opacity: 0;
+}
+.navToggleActive span:nth-child(3) {
+  transform: translateY(0) rotate(-45deg);
 }
