--- a/src/Sections/HotDrop/HotDrop.css
+++ b/src/Sections/HotDrop/HotDrop.css
@@ -13,6 +13,7 @@
   margin-top: 40px;
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .HotDrop .CategoryRow .CategoryChoose {
