--- a/src/Sections/Sellers/Sellers.scss
+++ b/src/Sections/Sellers/Sellers.scss
@@ -25,6 +25,7 @@
     margin-top: 150px;
 }
 .CommunityBlock {
+    padding: 0 30px;
     max-width: 1170px;
     margin: 0 auto;
     height: 360px;
