--- a/src/Sections/Starter/Starter.scss
+++ b/src/Sections/Starter/Starter.scss
@@ -77,7 +77,9 @@
         transition: 1s;
         position: relative;
         img {
-            height: 620px;
+            max-height: 620px;
+            max-width: 470px;
+            width: 90%;
         }
         &::before {
             content: "";
